--- a/config/deploy/heartbeat.nginx.erb
+++ b/config/deploy/heartbeat.nginx.erb
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name <%= server_name %> new-<%= server_name %>;
+  server_name <%= server_name %>;
   root <%= root %>;
 
   passenger_enabled on;
